try fixing the capture page clipping

--- a/frontend/src/pages/stylesheets/capture.css
+++ b/frontend/src/pages/stylesheets/capture.css
@@ -1,5 +1,4 @@
 #displayCapture {
-  position: fixed; /* changed from absolute to fixed */
   box-sizing: border-box; /* fixed the height issue */
   top: 0; /* position from the top */
   left: 0; /* position from the left */
@@ -27,7 +26,7 @@
 
 #preview {
   width: inherit;
-  max-height: 100vh;
+  /* max-height: 100vh; */
   top: 50%;
   width: 100%;
 }
